Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <a id="supported-platform" class="anchor" href="#supported-platform" aria-hidden="true"><span class="octicon octicon-link"></span></a>Supported Platform</h2>
 
 <p>OS X, Windows on Intel CPU/GPU, NVIDIA GPU.
-I've tested on OS X 10.10.1 (Intel Ivy Bridge, GTX 980, GT 650M) and Windows 8.1.
+I've tested on OS X 10.10.1 (Intel Ivy Bridge, GT 650M, GTX 980) and Windows 8.1.
 All suggestions for other platforms are welcome.</p>
 
 <h2>
@@ -57,7 +57,7 @@ All suggestions for other platforms are welcome.</p>
 </ol>
 
 <h3>
-<a id="mac" class="anchor" href="#mac" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mac</h3>
+<a id="os-x" class="anchor" href="#os-x" aria-hidden="true"><span class="octicon octicon-link"></span></a>OS X</h3>
 
 <ol>
 <li>Copy "OpenCL" folder to "Plugins" folder under your project directory.</li>
@@ -66,12 +66,22 @@ All suggestions for other platforms are welcome.</p>
 <h2>
 <a id="screenshots" class="anchor" href="#screenshots" aria-hidden="true"><span class="octicon octicon-link"></span></a>Screenshots</h2>
 
+<h3>
+<a id="windows-1" class="anchor" href="#windows-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>Windows</h3>
+
+<p><img src="https://raw.githubusercontent.com/kwonoh/OpenCL-UE4Plugin/gh-pages/images/opencl-ue4plugin-log-win.png" alt="Log Screenshots on Windows"></p>
+
+<h3>
+<a id="os-x-1" class="anchor" href="#os-x-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>OS X</h3>
+
+<p><img src="https://raw.githubusercontent.com/kwonoh/OpenCL-UE4Plugin/gh-pages/images/opencl-ue4plugin-log-osx.png" alt="Log Screenshots on OS X"></p>
+
 <h2>
 <a id="legal-info" class="anchor" href="#legal-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>Legal info</h2>
 
 <p>Unreal® is a trademark or registered trademark of Epic Games, Inc. in the United States of America and elsewhere. Unreal® Engine, Copyright 1998 – 2014, Epic Games, Inc. All rights reserved.</p>
 
-<p>Plugin is completely <strong>free</strong> and available under <a href="LICENSE">MIT open-source license</a>.</p>
+<p>Plugin is completely free and available under <a href="LICENSE">MIT open-source license</a>.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/kwonoh">kwonoh</a></p>
